--- a/.github/workflows/sherpa4selfie.yml
+++ b/.github/workflows/sherpa4selfie.yml
@@ -3,7 +3,7 @@ name: Node CI
 on:
   push:
     branches:
-      - production
+      - sherpa4selfie
 
 jobs:
   build_dist_package:
@@ -18,5 +18,5 @@ jobs:
       - name: Archive production artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: dist
+          name: sherpa4selfie
           path: dist
