--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
-VUE_APP_RECAPTCHA_KEY=
+VUE_APP_RECAPTCHA_KEY=6Lddc8kZAAAAACdCsXCyqH59ICqyuBedhFUIZ62k
 VUE_APP_CHATBOT_URL=http://83.212.93.155:5000
 VUE_APP_KNOWLEDGE_BASE_URL=http://localhost
